Keep alive pings for servicec notifications and xqueuewatcher
Sends special metric (keep_alive.ping) each 10 seconds

--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -30,6 +30,9 @@
 
 	<!-- Канал в телеграме, куда отправлять информацию об ошибках -->
 	<add key="ulearn.telegram.errors.channel" value="" />
+	  
+	<!-- Раз в сколько секунд посылать метрику keep alive -->
+	<add key="ulearn.notifications.keepAlive.interval" value="10"/>  
   </appSettings>
   <startup>
 	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
