--- a/src/Metrics/Metrics.csproj
+++ b/src/Metrics/Metrics.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="GraphiteMetricSender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceKeepAliver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
