--- a/src/Notifications.Service/App.config
+++ b/src/Notifications.Service/App.config
@@ -29,7 +29,10 @@
     <add key="ulearn.spam.templates.withButton" value="with_button" />
 
 	<!-- Канал в телеграме, куда отправлять информацию об ошибках -->
-	<add key="ulearn.telegram.errors.channel" value="" />  
+	<add key="ulearn.telegram.errors.channel" value="" />
+
+	<!-- Раз в сколько секунд посылать метрику keep alive -->
+	<add key="ulearn.notifications.keepAlive.interval" value="10"/>	  
   </appSettings>
   <startup>
 	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
