--- a/src/XQueueWatcher/App.config
+++ b/src/XQueueWatcher/App.config
@@ -11,12 +11,15 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
-    <add name="statsd" connectionString="" />
+    <add name="statsd" connectionString="address=graphite-test.skbkontur.ru;port=8125;transport=Tcp;prefixKey=ulearn.local" />
   </connectionStrings>
   <appSettings>
       <add key="ulearn.telegram.botToken" value="" />
       <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
       <add key="ulearn.telegram.errors.channel" value="" />
+
+      <!-- Раз в сколько секунд посылать метрику keep alive -->
+      <add key="ulearn.notifications.keepAlive.interval" value="10"/>
   </appSettings>
   <log4net>
 	<root>
