Some name changing

--- a/src/XQueueWatcher.Service/App.config
+++ b/src/XQueueWatcher.Service/App.config
@@ -19,7 +19,7 @@
     <add key="ulearn.telegram.errors.channel" value="" />
 
     <!-- Раз в сколько секунд посылать метрику keep alive -->
-    <add key="ulearn.notifications.keepAlive.interval" value="10"/>
+    <add key="ulearn.xqueuewatcher.keepAlive.interval" value="10"/>
   </appSettings>
   <log4net>
     <root>
