Start MetricsInstance in XQueueWatcher
Change graphite-test relay address

--- a/src/XQueueWatcher.Service/App.config
+++ b/src/XQueueWatcher.Service/App.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
-    <add name="statsd" connectionString="address=graphite-test.skbkontur.ru;port=8125;transport=Tcp;prefixKey=ulearn.local" />
+    <add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local" />
   </connectionStrings>
   <appSettings>
     <add key="ulearn.telegram.botToken" value="" />
