--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -20,7 +20,7 @@
   <connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
-    <add name="statsd" connectionString="" />
+    <add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local" />
   </connectionStrings>
   <appSettings>
     <!-- runnerToken должен совпадать в настройках Ulearn.Web и RunCsJob (или RunCsJob.Service в случае запуска через Windows-службу) -->
