--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -7,7 +7,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="statsd" connectionString="address=graphite-test.skbkontur.ru;port=8125;transport=Tcp;prefixKey=ulearn.local" />
+    <add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local" />
   </connectionStrings>
   <appSettings>
 	<add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
