--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -227,7 +227,6 @@
     <Compile Include="CSharp\BoolCompareValidator.cs" />
     <Compile Include="CSharp\IndentsValidator.cs" />
     <Compile Include="CSharp\IStrictValidator.cs" />
-    <Compile Include="CSharp\VerbInMethodNameValidation\NameIgnoreCaseComparer.cs" />
     <Compile Include="CSharp\VerbInMethodNameValidation\VerbInMethodNameValidator.cs" />
     <Compile Include="ExportedSlide.cs" />
     <Compile Include="Extensions\DictionaryExtension.cs" />
@@ -365,8 +364,8 @@
     <None Include="CSharp\README.md" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="SpellChecking\ru_RU.aff" />
     <EmbeddedResource Include="SpellChecking\ru_RU.dic" />
@@ -402,7 +401,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CSharp\VerbInMethodNameValidation\31K verbs.txt" />
+    <Content Include="CSharp\VerbInMethodNameValidation\english verbs.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
