refactor GiftsGranter. Make better authorization (store refresh token only)

--- a/src/GiftsGranter/appsettings.json
+++ b/src/GiftsGranter/appsettings.json
@@ -1,6 +1,10 @@
 ﻿{
   "maxGiftsPerRun": 2,
-  "authorization": "put here your authorization header parameter from Chrome Dev Tool",
+  "delayBetweenStaffRequests": 500,
+  "staff": {
+    "refreshToken": "",
+    "clientAuth": "ulearn_achievements:secret"
+  },
   "courses": [ "complexity" ],
   "complexity": {
     "maxScore": 32,
@@ -8,8 +12,8 @@
     "passScore": 25,
     "masterTitle": "Мастер оценки сложности алгоритмов",
     "passTitle": "Умею оценивать сложность алгоритмов",
-    "message": "Вот-вот продукты Контура будут активно использовать в каждой организации страны, поэтому в их коде нет места неэффективным алгоримам. [Курс по оценке сложности алгоритмов](https://ulearn.me/Course/complexity?kontur=true) на ulearn.me поможет писать только быстрый код :)",
+    "message": "Вот-вот продукты Контура будут активно использовать в каждой организации страны, поэтому в их коде нет места неэффективным алгоритмам. [Курс по оценке сложности алгоритмов](https://ulearn.me/Course/complexity?kontur=true) на ulearn.me поможет писать только быстрый код :)",
     "giftImagePath": "3PLk3n/achivement.png",
-    "subtitle": "{0} из {1} в онлайн курсе по оценке сложности — это вам не хухры-мухры!"
+    "subtitle": "{0} из {1} в онлайн-курсе по оценке сложности — это вам не хухры-мухры!"
   }
 }
