--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,5 +2,7 @@
 <configuration>
   <packageSources>
     <add key="MsBuild Private Feed" value="https://dotnet.myget.org/F/msbuild/api/v3/index.json" />
+    <add key="core" value="https://ci.appveyor.com/nuget/vostok-core" />
+    <add key="bluetape" value="https://ci.appveyor.com/nuget/vostok-bluetape" />
   </packageSources>
 </configuration>
