--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -25,4 +25,7 @@
   <ItemGroup>
     <Folder Include="Migrations" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AntiPlagiarism.Api\AntiPlagiarism.Api.csproj" />
+  </ItemGroup>
 </Project>
