--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -7,7 +7,11 @@
     },
     "hostLog": {
         "console": true,
-        "pathFormat": "log-{Date}.log"
+        "pathFormat": "logs/log-{Date}.log"
     },
-    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
+    
+    "antiplagiarism": {
+        "snippetTokensCount": 5
+    }
 }
