--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="System.Core" Version="3.5.21022.801" />
     <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
+    <PackageReference Include="System.Security.Principal" Version="4.3.0" />
     <PackageReference Include="Telegram.Bot" Version="13.4.0" />
     <PackageReference Include="UnidecodeSharp" Version="1.0.0" />
   </ItemGroup>
