--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.0" />
