--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -12,6 +12,7 @@
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
     
     "antiplagiarism": {
-        "snippetTokensCount": 5
+        "snippetTokensCount": 5,
+        "maxCodeLength": 100000 
     }
 }
