Configuration of AntiPlagiarisms: add count of last authors for calculating mean and deviation

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -13,6 +13,9 @@
     
     "antiplagiarism": {
         "snippetTokensCount": 5,
-        "maxCodeLength": 100000 
+        "maxCodeLength": 100000,
+        "statisticsAnalyzing": {
+            "countOfLastAuthorsForCalculatingMeanAndDeviation": 100
+        }
     }
 }
