--- a/src/.nuget/NuGet.Config
+++ b/src/.nuget/NuGet.Config
@@ -5,5 +5,7 @@
   </solution>
   <packageSources>
     <add key="MsBuild Private Feed" value="https://dotnet.myget.org/F/msbuild/api/v3/index.json" />
+    <add key="core" value="https://ci.appveyor.com/nuget/vostok-core" />
+    <add key="bluetape" value="https://ci.appveyor.com/nuget/vostok-bluetape" />
   </packageSources>
 </configuration>
