Store AuthorsCount for each snippet in database
Use only "coldest" snippets for search
Client can specify submissions count in GetAuthorPlagiarisms. By default it's 15

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -16,6 +16,14 @@
         "maxCodeLength": 100000,
         "statisticsAnalyzing": {
             "countOfLastAuthorsForCalculatingMeanAndDeviation": 100
+        },
+        "plagiarismDetector": {
+            "countOfColdestSnippetsUsedToSearch": 300
+        },
+        "actions": {
+            "getAuthorPlagiarisms": {
+                "maxLastSubmissionsCount": 50
+            }
         }
     }
 }
