Custom errors to web application

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -137,7 +137,7 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.7" maxRequestLength="16000000" enableVersionHeader="false" />
-    <customErrors mode="Off" />
+    <customErrors mode="RemoteOnly" />
     <globalization culture="ru-RU" uiCulture="ru" />
     <httpModules>
       <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" />      
