Contrinue extract some common helpers to Common project
Add references from AntiPlagiarism to Common (it was the goal!)
Remove app.config for .net core project

--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AntiPlagiarism.Api\AntiPlagiarism.Api.csproj" />
-    <ProjectReference Include="..\uLearn\uLearn.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 </Project>
