Database.Core: all migrations finished

--- a/src/Database.Core/appsettings.json
+++ b/src/Database.Core/appsettings.json
@@ -1,29 +1,3 @@
 {
-    "port": 33333,
-    "environment": "dev",
-    "airlock": {
-        "apiKey": "UniversalApiKey",
-        "host": "http://localhost:6306"
-    },
-    "hostLog": {
-        "console": true,
-        "pathFormat": "logs/log-{Date}.log"
-    },
-    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
-    
-    "antiplagiarism": {
-        "snippetTokensCount": 5,
-        "maxCodeLength": 100000,
-        "statisticsAnalyzing": {
-            "countOfLastAuthorsForCalculatingMeanAndDeviation": 100
-        },
-        "plagiarismDetector": {
-            "countOfColdestSnippetsUsedToSearch": 300
-        },
-        "actions": {
-            "getAuthorPlagiarisms": {
-                "maxLastSubmissionsCount": 50
-            }
-        }
-    }
+    "database": "Data Source=K1707004;Initial Catalog=ulearn_core;Integrated Security=True"    
 }
