--- a/src/Notifications.Service/packages.config
+++ b/src/Notifications.Service/packages.config
@@ -6,8 +6,8 @@
   <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
   <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
@@ -29,9 +29,11 @@
   <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net47" />
+  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net47" />
