--- a/src/RunCsJob.Api.Core/RunCsJob.Api.Core.csproj
+++ b/src/RunCsJob.Api.Core/RunCsJob.Api.Core.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>RunCsJob.Api</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.0" />
+  </ItemGroup>
 </Project>
