--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="NHunspell" Version="1.2.5554.16953" />
     <PackageReference Include="NUnit" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
     <PackageReference Include="System.Core" Version="3.5.21022.801" />
     <PackageReference Include="System.IO.Compression" Version="4.3.0" />
