--- a/src/.nuget/NuGet.Config
+++ b/src/.nuget/NuGet.Config
@@ -4,6 +4,8 @@
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
   <packageSources>
+    <add key="nuget">https://www.nuget.org/api/v2/</add>
+    <add key="Kontur nuget">http://nuget.kontur/api/v2</add>
     <add key="MsBuild Private Feed" value="https://dotnet.myget.org/F/msbuild/api/v3/index.json" />
     <add key="core" value="https://ci.appveyor.com/nuget/vostok-core" />
     <add key="bluetape" value="https://ci.appveyor.com/nuget/vostok-bluetape" />
