--- a/src/Notifications/packages.config
+++ b/src/Notifications/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
