--- a/src/XQueueWatcher/packages.config
+++ b/src/XQueueWatcher/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
