--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -40,6 +40,6 @@
       <Project>{B7DF3FA1-307F-4F9A-87F0-B0FAA9D2CE8C}</Project>
       <Name>RunCsJob.Api.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ulearn.CSharpAttributes.Core\Ulearn.CSharpAttributes.Core.csproj" />
+    <ProjectReference Include="..\Ulearn.CSharpAttributes\Ulearn.CSharpAttributes.csproj" />
   </ItemGroup>
 </Project>
