--- a/src/uLearn.CSharpAttributes/Ulearn.CSharpAttributes.csproj
+++ b/src/uLearn.CSharpAttributes/Ulearn.CSharpAttributes.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Ulearn</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NETStandard.Library" Version="2.0.1" />
