--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -133,7 +133,7 @@
       <assemblies>
         <add assembly="System.Runtime"/>
         <add assembly="System.Collections"/>
-        <add assembly="RunCsJob.Api.Core"/>
+        <add assembly="RunCsJob.Api"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.7" maxRequestLength="16000000" enableVersionHeader="false" />
