React frontend application and DI for  Web.Api

--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -9,10 +9,10 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
-    <PackageReference Include="Vostok.Hosting" Version="1.0.0-pre000370" />
-    <PackageReference Include="Vostok.Hosting.Core" Version="1.0.0-pre000370" />
-    <PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-pre000129" />
-    <PackageReference Include="Vostok.Logging.Serilog" Version="1.0.0-pre000129" />
+    <PackageReference Include="Vostok.Hosting" Version="0.0.0.468" />
+    <PackageReference Include="Vostok.Hosting.Core" Version="0.0.0.468" />
+    <PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="0.0.0.3" />
+    <PackageReference Include="Vostok.Logging.Serilog" Version="0.0.0.4" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
@@ -23,8 +23,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Database\Database.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Database.Core\Database.Core.csproj" />
     <ProjectReference Include="..\RunCsJob.Api\RunCsJob.Api.csproj" />
-    <ProjectReference Include="..\uLearn\uLearn.csproj" />
   </ItemGroup>
 </Project>
