--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -7,6 +7,7 @@
     },
     "hostLog": {
         "console": true,
-        "pathFormat": "log-{Date}.log"
-    }
+        "pathFormat": "logs/log-{Date}.log"
+    },
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
 }
