--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -891,6 +891,21 @@
     <Content Include="flexslider\jquery.flexslider-min.js" />
     <Content Include="flexslider\jquery.flexslider.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="frontend\package.json" />
+    <Content Include="frontend\public\favicon.ico" />
+    <Content Include="frontend\public\index.html" />
+    <Content Include="frontend\public\manifest.json" />
+    <Content Include="frontend\README.md" />
+    <Content Include="frontend\src\App.css" />
+    <Content Include="frontend\src\App.js" />
+    <Content Include="frontend\src\App.test.js" />
+    <Content Include="frontend\src\components\common\Header.js" />
+    <Content Include="frontend\src\index.css" />
+    <Content Include="frontend\src\index.js" />
+    <Content Include="frontend\src\logo.svg" />
+    <Content Include="frontend\src\pages\home\index.js" />
+    <Content Include="frontend\src\pages\home\IndexPage.js" />
+    <Content Include="frontend\src\registerServiceWorker.js" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Jsdifflib\jsdifflib.css" />
