ExtensionslessUrlHAndler for Courses
Prevent to showing 404 for course page with dot in name (i.e. /Course/Testing.Additional)

--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,7 @@ FakesAssemblies/
 /src/Courses/Courses.Staging/*.zip
 /src/Courses/Courses.Versions/*.zip
 /src/uLearn.Web/Certificates/
+/src/uLearn.Web/Courses/
 /src/UI.Tests/screenshots
 /src/uLearn.Tests/CSharp/BasicProgramming
 *.received.txt
