--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -182,7 +182,7 @@
          <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
          <remove name="OPTIONSVerbHandler"/>
          <remove name="TRACEVerbHandler"/>
-         <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+         <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>        
     </handlers>
 
     <rewrite>
@@ -551,4 +551,15 @@
       </authorization>
     </system.web>
   </location>
+    <location path="Course">
+        <system.webServer>
+            <handlers>
+                <remove name="StaticFile"/>
+                
+                <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+                <!-- Pass all requests to TransferRequestHandler (path="*" instead of path="*.") -->
+                <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*" verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+            </handlers>
+        </system.webServer>
+    </location>
 </configuration>
