--- a/src/uLearn.Web/frontend/public/manifest.json
+++ b/src/uLearn.Web/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ulearn",
+  "name": "Ulearn.me",
   "icons": [
     {
       "src": "favicon.ico",
