--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -72,6 +72,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
   <package id="NUnit" version="3.9.0" targetFramework="net47" />
   <package id="NUnit.Console" version="3.6.1" targetFramework="net47" />
   <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net47" />
