Fix defaults in config

--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -5,5 +5,10 @@
         "errors": {
             "channel": ""
         }
+    },
+    "buildExerciseStudentZips": true,
+    "exerciseStudentZipsDirectory": "",
+    "certificates": {
+        "directory": ""
     }
 }
