Add vostok sources for nuget

--- a/src/nuget.config
+++ b/src/nuget.config
@@ -11,5 +11,8 @@
     <add key="vostok.hosting.core" value="https://ci.appveyor.com/nuget/vostok-hosting-core" />
     <add key="vostok.instrumentation.aspnetcore" value="https://ci.appveyor.com/nuget/vostok-instrumentation-aspnetcore" />
     <add key="vostok.logging.serilog" value="https://ci.appveyor.com/nuget/vostok-logging-serilog" />
+    <add key="vostok.clusterclient" value="https://ci.appveyor.com/nuget/vostok-clusterclient" />
+    <add key="vostok.clusterclient.transport.http" value="https://ci.appveyor.com/nuget/vostok-clusterclient-transport-http" />
+    <add key="vostok.airlock.client" value="https://ci.appveyor.com/nuget/vostok-airlock-client" />
   </packageSources>
 </configuration>
