--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -60,6 +60,9 @@
     <Reference Include="LtiLibrary.Core, Version=1.6.6154.21256, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\LtiLibrary.Core.1.6.2\lib\net45\LtiLibrary.Core.dll</HintPath>
     </Reference>
+    <Reference Include="MarkdownDeep.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MarkdownDeep.NET.Core.1.5.0.4\lib\netstandard2.0\MarkdownDeep.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -68,6 +71,9 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -587,6 +593,10 @@
     <Compile Include="Migrations\201711201858456_AddKonturLoginToApplicationUser.Designer.cs">
       <DependentUpon>201711201858456_AddKonturLoginToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802121225237_AddAntiPlagiarismSubmissionId.cs" />
+    <Compile Include="Migrations\201802121225237_AddAntiPlagiarismSubmissionId.Designer.cs">
+      <DependentUpon>201802121225237_AddAntiPlagiarismSubmissionId.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -917,6 +927,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711201858456_AddKonturLoginToApplicationUser.resx">
       <DependentUpon>201711201858456_AddKonturLoginToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802121225237_AddAntiPlagiarismSubmissionId.resx">
+      <DependentUpon>201802121225237_AddAntiPlagiarismSubmissionId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
