--- a/src/Database/packages.config
+++ b/src/Database/packages.config
@@ -7,11 +7,13 @@
   <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="LtiLibrary.Core" version="1.6.2" targetFramework="net47" />
+  <package id="MarkdownDeep.NET.Core" version="1.5.0.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="NUnit" version="3.9.0" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
