--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -36,7 +36,23 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.0.2" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.0.2" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
@@ -45,20 +61,28 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.3" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.0.3" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
+  <package id="Microsoft.Net.Http.Headers" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net47" />
@@ -86,8 +110,11 @@
   <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net47" />
   <package id="Respond" version="1.4.2" targetFramework="net47" />
   <package id="RestSharp" version="105.0.1" targetFramework="net47" />
+  <package id="Serilog" version="2.6.0" targetFramework="net47" />
+  <package id="Serilog.Sinks.Log4Net" version="1.5.16" targetFramework="net47" />
   <package id="SkbKontur.Passport.Client" version="2.0.3" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net47" />
@@ -95,6 +122,7 @@
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net47" />
   <package id="System.Console" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net47" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
