Add *.mmap to staticContent in web.config

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -162,6 +162,7 @@
       <mimeMap fileExtension="woff2" mimeType="application/font-woff2"/>
       <mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation"/>
       <mimeMap fileExtension="zip" mimeType="application/zip"/>
+      <mimeMap fileExtension="mmap" mimeType="application/vnd.mindjet.mindmanage"/>
     </staticContent>
 
     <security>
