Option ulearn.antiplagiarism.enabled for disabling sending submissions to antiplagiarism

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -105,6 +105,7 @@
     <add key="ulearn.spam.templates.withButton" value="with_button" />
       
     <!-- Конфигурация клиента для сервиса антиплагиата -->
+    <add key="ulearn.antiplagiarism.enabled" value="true" />
     <add key="ulearn.antiplagiarism.endpoint" value="http://localhost:33333/api/" />  
     <add key="ulearn.antiplagiarism.token" value="A21DB9C3-A4B1-4B8D-9ED5-B0DF973FF060" />
   </appSettings>   
