AntiPlagiarism: recalculate task statistics parameters not for each request
Change logic in AddOrUpdate

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -2,8 +2,8 @@
     "port": 33333,
     "environment": "dev",
     "airlock": {
-        "apiKey": "UniversalApiKey",
-        "host": "http://localhost:6306"
+        "apiKey": "eS3quoNgaiC8",
+        "host": "http://vostok.dev.kontur.ru:6306"
     },
     "hostLog": {
         "console": true,
@@ -15,7 +15,8 @@
         "snippetTokensCount": 12,
         "maxCodeLength": 100000,
         "statisticsAnalyzing": {
-            "countOfLastAuthorsForCalculatingMeanAndDeviation": 100
+            "countOfLastAuthorsForCalculatingMeanAndDeviation": 100,
+            "recalculateStatisticsAfterSubmisionsCount": 1000
         },
         "plagiarismDetector": {
             "countOfColdestSnippetsUsedToSearch": 300
