Fix zero-tokens submissions issue in antiplagiarism
Fix some other issues
Add logging

--- a/src/RunCsJob/RunCsJob.csproj
+++ b/src/RunCsJob/RunCsJob.csproj
@@ -221,7 +221,7 @@
       <SubType>Designer</SubType>
     </None>
     <EmbeddedResource Include=".\WellKnownLibs\*.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <AdditionalFiles Include=".\WellKnownLibs\README.md" />
     <None Include="packages.config" />
