Get minimum logger level from config

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -7,7 +7,8 @@
     },
     "hostLog": {
         "console": true,
-        "pathFormat": "logs/log-{Date}.log"
+        "pathFormat": "logs/log-{Date}.log",
+        "minimumLevel": "debug"
     },
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
     
