Configs and deploy script for GiftsGranter

--- a/src/GiftsGranter/App.config
+++ b/src/GiftsGranter/App.config
@@ -22,6 +22,7 @@
       <level value="DEBUG" />
       <appender-ref ref="FileAppender" />
       <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="TelegramAppender" />
     </root>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
       <file value="logs\\gifts.log" />
@@ -44,6 +45,19 @@
         <conversionPattern value="%date %-5level %logger — %message%newline" />
       </layout>
     </appender>
+
+    <!--
+     Для работы этого аппендера должны быть установлены переменные в appsettings.json:
+       telegram:botToken
+       telegram:errors:channel 
+    -->
+    <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, Core">
+      <threshold value="Error" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
+      </layout>
+    </appender>  
+
   </log4net>
 
 
