--- a/src/GiftsGranter/appsettings.json
+++ b/src/GiftsGranter/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+  "telegram": {
+    "botToken": "293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg",
+    "errors": {
+      "channel": ""
+    }
+  },
   "maxGiftsPerRun": 2,
   "delayBetweenStaffRequests": 500,
   "staff": {
