--- a/src/GiftsGranter/packages.config
+++ b/src/GiftsGranter/packages.config
@@ -4,6 +4,15 @@
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net471" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net47" />
@@ -33,6 +42,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
