Add logging to quiz ordering block, try to catch a bug on production server
+ remove staging vostok url
+ fix bug with bold text in quizes

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -2,8 +2,8 @@
     "port": 33333,
     "environment": "dev",
     "airlock": {
-        "apiKey": "eS3quoNgaiC8",
-        "host": "http://vostok.dev.kontur.ru:6306"
+        "apiKey": "UniversalApiKey",
+        "host": "https://vostok.skbkontur.ru"
     },
     "hostLog": {
         "console": true,
